--- a/index.html
+++ b/index.html
@@ -6,15 +6,32 @@
 
 <body>
 
-    <svg class="circular" width="100%" height="100%" viewBox="0 0 42 42">
+<!--
+<svg class="circular" width="100%" height="100%" viewBox="0 0 42 42">
         <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
 
-        <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#d2d3d4" stroke-width="3"></circle>
+        <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#C2C2C2" stroke-width="3"></circle>
         <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" ></circle>
 
     </svg>
+-->
+
+    <!--
+    <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42">
+        <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
+
+        <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#d2d3d4" stroke-width="3"></circle>
+        <circle class="donut-segment1" cx="21" cy="21" r="15.91549430918954" ></circle>
+        <circle class="donut-segment2" cx="21" cy="21" r="15.91549430918954" ></circle>
+        <circle class="donut-segment3" cx="21" cy="21" r="15.91549430918954" ></circle>
+        <circle class="donut-segment4" cx="21" cy="21" r="15.91549430918954" ></circle>
+        <circle class="donut-segment5" cx="21" cy="21" r="15.91549430918954" ></circle>
+
+    </svg>
+-->
 
 
+    <embed src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px">
 </body>
 
 </html>
