--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<!--
+    <!--
 <svg class="circular" width="100%" height="100%" viewBox="0 0 42 42">
         <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
 
@@ -32,6 +32,7 @@
 
 
     <embed src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px">
+    <embed src="./img/reader-toolbar-zoomout.svg" style="display: block; width: 80px">
 </body>
 
 </html>
