add zoomin img  with origin w/h=80

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 
     <embed src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px">
+    <embed src="./img/reader-toolbar-zoomin-80.svg" style="display: block; width: 80px">
     <embed src="./img/reader-toolbar-zoomout.svg" style="display: block; width: 80px">
 </body>
 
