add h70 zoomin img

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </svg>
 -->
 
-
-    <embed src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px">
-    <embed src="./img/reader-toolbar-zoomin-80.svg" style="display: block; width: 80px">
+    <img src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px">
+    <embed src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px">
+    <embed src="./img/reader-toolbar-zoomin-h-70.svg" style="display: block; width: 70px">
     <embed src="./img/reader-toolbar-zoomout.svg" style="display: block; width: 80px">
 </body>
 
