--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     </svg>
 -->
 
-    <!--
-    <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42">
+<svg class="donut" width="100%" height="100%" viewBox="0 0 42 42">
         <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
 
         <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#d2d3d4" stroke-width="3"></circle>
@@ -28,12 +27,12 @@
         <circle class="donut-segment5" cx="21" cy="21" r="15.91549430918954" ></circle>
 
     </svg>
--->
-
-    <img src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px">
+<!--
+    <object src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px"></object>
     <embed src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px">
     <embed src="./img/reader-toolbar-zoomin-h-70.svg" style="display: block; width: 70px">
     <embed src="./img/reader-toolbar-zoomout.svg" style="display: block; width: 80px">
+-->
 </body>
 
 </html>
