--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 
+
 <body>
 
-    <svg class="circular" width="100%" height="100%" viewBox="0 0 42 42">
+    <!--
+<svg class="circular" width="100%" height="100%" viewBox="0 0 42 42">
         <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
         <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#C2C2C2" stroke-width="3"></circle>
         <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" ></circle>
     </svg>
+-->
+
+    <div>
+    </div>
+
+    <div class="loader"></div>
     <!--
     <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42">
         <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
