--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     </div>
 
     <div class="loader"></div>
+    <h2>As Iframe</h2>
+    <iframe src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg" frameborder="0"></iframe>
+
+    <h2>As Object</h2>
+    <object data="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg" type=""></object>
+
+    <h2>As Embed</h2>
+    <embed src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg" type="" />
     <!--
     <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42">
         <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
@@ -32,6 +40,7 @@
 
     </svg>
 -->
+
 
     <!--
     <object src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px"></object>
