--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     </svg>
 -->
 
-    <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/6089dV4nqrQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    </div>
 
-    <div class="loader"></div>
+
+    <!--    <div class="loader"></div>-->
+    <!--
     <h2>As Iframe</h2>
     <iframe src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg" frameborder="0"></iframe>
 
@@ -28,6 +27,7 @@
 
     <h2>As Embed</h2>
     <embed src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg" type="" />
+-->
     <!--
     <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42">
         <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
@@ -43,12 +43,12 @@
 -->
 
 
-    <!--
+
     <object src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px"></object>
     <embed src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px">
     <embed src="./img/reader-toolbar-zoomin-h-70.svg" style="display: block; width: 70px">
     <embed src="./img/reader-toolbar-zoomout.svg" style="display: block; width: 80px">
--->
+
 
 </body>
 
