add shape-renedering tag

--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
 -->
 
 
-
-    <object src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px"></object>
-    <embed src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px">
-    <embed src="./img/reader-toolbar-zoomin-h-70.svg" style="display: block; width: 70px">
+    <!--
+<object src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px"></object>
+<embed src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px">
+-->
+    <!--    <embed src="./img/reader-toolbar-zoomin-h-70.svg" style="display: block; width: 70px">-->
     <embed src="./img/reader-toolbar-zoomout.svg" style="display: block; width: 80px">
 
 
