--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
 
 
-    <!--    <div class="loader"></div>-->
-    <!--
+<div class="loader"></div>    <!--
     <h2>As Iframe</h2>
     <iframe src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg" frameborder="0"></iframe>
 
@@ -44,11 +43,13 @@
 
 
 
+<!--
     <object src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px"></object>
     <embed src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px">
 
     <embed src="img/reader_toolbar_zoomin-h-70.svg" style="display: block; width: 70px">
     <embed src="./img/reader-toolbar-zoomout.svg" style="display: block; width: 80px">
+-->
 
 
 </body>
