--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 <body>
 
+
     <!--
-<svg class="circular" width="100%" height="100%" viewBox="0 0 42 42">
+    <svg class="circular" width="100%" height="100%" viewBox="0 0 42 42">
         <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
         <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#C2C2C2" stroke-width="3"></circle>
         <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" ></circle>
@@ -17,7 +18,9 @@
 
 
 
-<div class="loader"></div>    <!--
+
+    <div class="loader"></div>
+    <!--
     <h2>As Iframe</h2>
     <iframe src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg" frameborder="0"></iframe>
 
@@ -27,8 +30,9 @@
     <h2>As Embed</h2>
     <embed src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg" type="" />
 -->
-    <!--
-    <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42">
+
+    <div>
+        <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42">
         <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
 
         <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#d2d3d4" stroke-width="3"></circle>
@@ -39,11 +43,11 @@
         <circle class="donut-segment5" cx="21" cy="21" r="15.91549430918954" ></circle>
 
     </svg>
--->
+    </div>
 
 
 
-<!--
+    <!--
     <object src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px"></object>
     <embed src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px">
 
