--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42">
         <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
 
-        <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#FFF" stroke-width="3"></circle>
+        <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#EFEFEF" stroke-width="3"></circle>
         <circle class="donut-segment1" cx="21" cy="21" r="15.91549430918954" ></circle>
         <circle class="donut-segment2" cx="21" cy="21" r="15.91549430918954" ></circle>
         <circle class="donut-segment3" cx="21" cy="21" r="15.91549430918954" ></circle>
