--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42">
         <circle class="donut-hole" cx="21" cy="21" r="10" fill="#fff" stroke="#000000" stroke-width="1"></circle>
 
-        <circle class="donut-ring" cx="21" cy="21" r="12" fill="transparent" stroke="#FFFFFF" stroke-width="3"></circle>
+<!--        <circle class="donut-ring" cx="21" cy="21" r="12" fill="transparent" stroke="#FFFFFF" stroke-width="3"></circle>-->
             
         <circle class="donut-outline" cx="21" cy="21" r="14" fill="transparent" stroke="#000000" stroke-width="1"></circle>    
         <circle class="donut-segment1" cx="21" cy="21" r="12" ></circle>
