--- a/index.html
+++ b/index.html
@@ -33,21 +33,18 @@
 -->
 
     <div>
+
         <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42">
-        <circle class="donut-hole" cx="21" cy="21" r="10" fill="#fff" stroke="#000000" stroke-width="1"></circle>
 
-<!--        <circle class="donut-ring" cx="21" cy="21" r="12" fill="transparent" stroke="#FFFFFF" stroke-width="3"></circle>-->
-            
-        <circle class="donut-outline" cx="21" cy="21" r="12" fill="transparent" stroke="#000000" stroke-width="1"></circle>    
-        <circle class="donut-segment1" cx="21" cy="21" r="11" ></circle>
-<!--
-        <circle class="donut-segment2" cx="21" cy="21" r="15.91549430918954" ></circle>
-        <circle class="donut-segment3" cx="21" cy="21" r="15.91549430918954" ></circle>
-        <circle class="donut-segment4" cx="21" cy="21" r="15.91549430918954" ></circle>
-        <circle class="donut-segment5" cx="21" cy="21" r="15.91549430918954" ></circle>
--->
+            <circle class="donut-segment1" cx="21" cy="21" r="11" ></circle>
 
-    </svg>
+        </svg>
+
+        <svg class="donutOutline" width="100%" height="100%" viewBox="0 0 42 42">
+            <circle class="donut-hole" cx="21" cy="21" r="10" fill="#fff" stroke="#000" stroke-width="1"></circle>
+ 
+            <circle class="donut-outline" cx="21" cy="21"   r="12" fill="transparent" stroke="#000" stroke-width="1"></circle>    
+        </svg>
     </div>
 
 
