--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
     <div>
 
-        <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42">
+        <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42" shape-rendering="geometricPrecision">
 
             <circle class="donut-segment1" cx="21" cy="21" r="11" ></circle>
 
         </svg>
 
-        <svg class="donutOutline" width="100%" height="100%" viewBox="0 0 42 42">
+        <svg class="donutOutline" width="100%" height="100%" viewBox="0 0 42 42" shape-rendering="geometricPrecision">
             <circle class="donut-hole" cx="21" cy="21" r="10" fill="#fff" stroke="#000" stroke-width="1"></circle>
  
             <circle class="donut-outline" cx="21" cy="21"   r="12" fill="transparent" stroke="#000" stroke-width="1"></circle>    
