--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
     <div class="loader"></div>
-    <div class="loader2"></div>
+    <!--<div class="loader2"></div>-->
     <!--
     <h2>As Iframe</h2>
     <iframe src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg" frameborder="0"></iframe>
