--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
 
 
 
-    <!--
-    <object src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px"></object>
-    <embed src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px">
 
-    <embed src="img/reader_toolbar_zoomin-h-70.svg" style="display: block; width: 70px">
-    <embed src="./img/reader-toolbar-zoomout.svg" style="display: block; width: 80px">
--->
+    <!--    <object src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px"></object>-->
+    <div>
+        <embed class="spinIcon" src="./img/sync.svg" style="display: block; width: 80px; height: 80px">
+    </div>
+    <!--    <embed src="img/reader_toolbar_zoomin-h-70.svg" style="display: block; width: 70px">-->
+    <!--    <embed src="./img/reader-toolbar-zoomout.svg" style="display: block; width: 80px">-->
+
 
 
 </body>
