eInk grayscale test

--- a/index.html
+++ b/index.html
@@ -7,6 +7,67 @@
 
 <body>
 
+    <div>
+        <svg width="640" height="40">
+            <defs>
+                <linearGradient id="grad" x1="0%" y1="0%" x2="100%" y2="0%">
+                    <stop offset="0%" style="stop-color:rgb(255,255,255);stop-opacity:1" />
+                    <stop offset="100%" style="stop-color:rgb(0,0,0);stop-opacity:1" />
+                </linearGradient>
+            </defs>
+            <rect width="640" height="40" fill="url(#grad)" />
+        </svg>
+    </div>
+    <div class="container">
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(255,255,255)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(238,238,238)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(221,221,221)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(204,204,204)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(187,187,187)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(170,170,170)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(153,153,153)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(136,136,136)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(119,119,119)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(102,102,102)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(85,85,85)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(68,68,68)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(51,51,51)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(34,34,34)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(17,17,17)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(0,0,0)" />
+        </svg>
+    </div>
 
     <!--
     <svg class="circular" width="100%" height="100%" viewBox="0 0 42 42">
@@ -16,10 +77,36 @@
     </svg>
 -->
 
+    <!--
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+        <path d="M0,10 L2,10 C2,14.418278 5.581722,18 10,18 L10,20 C4.4771525,20 0,15.5228475 0,10 Z">
+            <animateTransform repeatCount="indefinite" type="rotate" attributeName="transform" dur="10s" from="0" to="360" />
+            
+        </path>
+    </svg>
+-->
 
 
+    <!--
+    <svg width="38" height="38" viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg" stroke="#000">
+    <g fill="none" fill-rule="evenodd">
+        <g transform="translate(1 1)" stroke-width="2">
+            <circle stroke-opacity="0" cx="18" cy="18" r="18"/>
+            <path d="M36 18c0-9.94-8.06-18-18-18">
+                <animateTransform
+                    attributeName="transform"
+                    type="rotate"
+                    from="0 18 18"
+                    to="360 18 18"
+                    dur="6s"
+                    repeatCount="indefinite"/>
+            </path>
+        </g>
+    </g>
+</svg>
+-->
 
-    <div class="loader"></div>
+    <!--    <div class="loader"></div>-->
     <!--<div class="loader2"></div>-->
     <!--
     <h2>As Iframe</h2>
@@ -32,20 +119,22 @@
     <embed src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg" type="" />
 -->
 
-    <div>
+    <!--
+<div>
 
-        <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42" shape-rendering="geometricPrecision">
+    <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42" shape-rendering="geometricPrecision">
 
             <circle class="donut-segment1" cx="21" cy="21" r="10" ></circle>
 
         </svg>
 
-        <svg class="donutOutline" width="100%" height="100%" viewBox="0 0 42 42" shape-rendering="geometricPrecision">
+    <svg class="donutOutline" width="100%" height="100%" viewBox="0 0 42 42" shape-rendering="geometricPrecision">
             <circle class="donut-hole" cx="21" cy="21" r="10" fill="#fff" stroke="#000" stroke-width=""></circle>
  
-            <circle class="donut-outline" cx="21" cy="21"   r="12" fill="transparent" stroke="#000" stroke-width="1"></circle>    
+            <circle class="donut-outline" cx="21" cy="21" r="12" fill="transparent" stroke="#000" stroke-width="1"></circle>    
         </svg>
-    </div>
+</div>
+-->
 
 
     <!--
@@ -68,9 +157,11 @@
 
 
     <!--    <object src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px"></object>-->
-    <div>
-        <embed class="spinIcon" src="./img/sync.svg" style="display: block; width: 80px; height: 80px">
-    </div>
+    <!--
+<div>
+    <embed src="./img/reader_hyread_logo.svg" style="display: block; width: 80px; height: 80px">
+</div>
+-->
     <!--    <embed src="img/reader_toolbar_zoomin-h-70.svg" style="display: block; width: 70px">-->
     <!--    <embed src="./img/reader-toolbar-zoomout.svg" style="display: block; width: 80px">-->
 
