eInk grayscale test2

--- a/index.html
+++ b/index.html
@@ -68,19 +68,25 @@
             <rect width="40" height="40" style="fill:rgb(0,0,0)" />
         </svg>
     </div>
+    <div class="container">
+        <img src="img/4_bit_grayscale_palette_by_10binary-d36dso3.png" width="360px">
+    </div>
+    <div class="container">
+        <img src="img/Grayscale_4bit_palette_sample_image.png" width="150px" height="200px">
+    </div>
 
     <!--
-    <svg class="circular" width="100%" height="100%" viewBox="0 0 42 42">
-        <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
-        <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#C2C2C2" stroke-width="3"></circle>
-        <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" ></circle>
+    <svg class=" circular " width="100% " height="100% " viewBox="0 0 42 42 ">
+        <circle class="donut-hole " cx="21 " cy="21 " r="15.91549430918954 " fill="#fff "></circle>
+        <circle class="donut-ring " cx="21 " cy="21 " r="15.91549430918954 " fill="transparent " stroke="#C2C2C2 " stroke-width="3 "></circle>
+        <circle class="donut-segment " cx="21 " cy="21 " r="15.91549430918954 " ></circle>
     </svg>
 -->
 
     <!--
-    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
-        <path d="M0,10 L2,10 C2,14.418278 5.581722,18 10,18 L10,20 C4.4771525,20 0,15.5228475 0,10 Z">
-            <animateTransform repeatCount="indefinite" type="rotate" attributeName="transform" dur="10s" from="0" to="360" />
+    <svg xmlns="http://www.w3.org/2000/svg " width="20 " height="20 " viewBox="0 0 20 20 ">
+        <path d="M0,10 L2,10 C2,14.418278 5.581722,18 10,18 L10,20 C4.4771525,20 0,15.5228475 0,10 Z ">
+            <animateTransform repeatCount="indefinite " type="rotate " attributeName="transform " dur="10s " from="0 " to="360 " />
             
         </path>
     </svg>
@@ -88,50 +94,50 @@
 
 
     <!--
-    <svg width="38" height="38" viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg" stroke="#000">
-    <g fill="none" fill-rule="evenodd">
-        <g transform="translate(1 1)" stroke-width="2">
-            <circle stroke-opacity="0" cx="18" cy="18" r="18"/>
-            <path d="M36 18c0-9.94-8.06-18-18-18">
+    <svg width="38 " height="38 " viewBox="0 0 38 38 " xmlns="http://www.w3.org/2000/svg " stroke="#000 ">
+    <g fill="none " fill-rule="evenodd ">
+        <g transform="translate(1 1) " stroke-width="2 ">
+            <circle stroke-opacity="0 " cx="18 " cy="18 " r="18 "/>
+            <path d="M36 18c0-9.94-8.06-18-18-18 ">
                 <animateTransform
-                    attributeName="transform"
-                    type="rotate"
-                    from="0 18 18"
-                    to="360 18 18"
-                    dur="6s"
-                    repeatCount="indefinite"/>
+                    attributeName="transform "
+                    type="rotate "
+                    from="0 18 18 "
+                    to="360 18 18 "
+                    dur="6s "
+                    repeatCount="indefinite "/>
             </path>
         </g>
     </g>
 </svg>
 -->
 
-    <!--    <div class="loader"></div>-->
-    <!--<div class="loader2"></div>-->
+    <!--    <div class="loader "></div>-->
+    <!--<div class="loader2 "></div>-->
     <!--
     <h2>As Iframe</h2>
-    <iframe src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg" frameborder="0"></iframe>
+    <iframe src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg " frameborder="0 "></iframe>
 
     <h2>As Object</h2>
-    <object data="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg" type=""></object>
+    <object data="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg " type=" "></object>
 
     <h2>As Embed</h2>
-    <embed src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg" type="" />
+    <embed src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/movingcart_1.svg " type=" " />
 -->
 
     <!--
 <div>
 
-    <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42" shape-rendering="geometricPrecision">
+    <svg class="donut " width="100% " height="100% " viewBox="0 0 42 42 " shape-rendering="geometricPrecision ">
 
-            <circle class="donut-segment1" cx="21" cy="21" r="10" ></circle>
+            <circle class="donut-segment1 " cx="21 " cy="21 " r="10 " ></circle>
 
         </svg>
 
-    <svg class="donutOutline" width="100%" height="100%" viewBox="0 0 42 42" shape-rendering="geometricPrecision">
-            <circle class="donut-hole" cx="21" cy="21" r="10" fill="#fff" stroke="#000" stroke-width=""></circle>
+    <svg class="donutOutline " width="100% " height="100% " viewBox="0 0 42 42 " shape-rendering="geometricPrecision ">
+            <circle class="donut-hole " cx="21 " cy="21 " r="10 " fill="#fff " stroke="#000 " stroke-width=" "></circle>
  
-            <circle class="donut-outline" cx="21" cy="21" r="12" fill="transparent" stroke="#000" stroke-width="1"></circle>    
+            <circle class="donut-outline " cx="21 " cy="21 " r="12 " fill="transparent " stroke="#000 " stroke-width="1 "></circle>    
         </svg>
 </div>
 -->
@@ -139,15 +145,15 @@
 
     <!--
     <div>
-        <svg class="donut" width="100%" height="100%" viewBox="0 0 42 42">
-        <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff" stroke="#000000" stroke-width="1"></circle>
+        <svg class="donut " width="100% " height="100% " viewBox="0 0 42 42 ">
+        <circle class="donut-hole " cx="21 " cy="21 " r="15.91549430918954 " fill="#fff " stroke="#000000 " stroke-width="1 "></circle>
 
-        <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#EFEFEF" stroke-width="3"></circle>
-        <circle class="donut-segment1" cx="21" cy="21" r="15.91549430918954" ></circle>
-        <circle class="donut-segment2" cx="21" cy="21" r="15.91549430918954" ></circle>
-        <circle class="donut-segment3" cx="21" cy="21" r="15.91549430918954" ></circle>
-        <circle class="donut-segment4" cx="21" cy="21" r="15.91549430918954" ></circle>
-        <circle class="donut-segment5" cx="21" cy="21" r="15.91549430918954" ></circle>
+        <circle class="donut-ring " cx="21 " cy="21 " r="15.91549430918954 " fill="transparent " stroke="#EFEFEF " stroke-width="3 "></circle>
+        <circle class="donut-segment1 " cx="21 " cy="21 " r="15.91549430918954 " ></circle>
+        <circle class="donut-segment2 " cx="21 " cy="21 " r="15.91549430918954 " ></circle>
+        <circle class="donut-segment3 " cx="21 " cy="21 " r="15.91549430918954 " ></circle>
+        <circle class="donut-segment4 " cx="21 " cy="21 " r="15.91549430918954 " ></circle>
+        <circle class="donut-segment5 " cx="21 " cy="21 " r="15.91549430918954 " ></circle>
 
     </svg>
     </div>
@@ -156,14 +162,14 @@
 
 
 
-    <!--    <object src="./img/reader-toolbar-zoomin.svg" style="display: block; width: 80px; height: 80px"></object>-->
+    <!--    <object src="./img/reader-toolbar-zoomin.svg " style="display: block; width: 80px; height: 80px "></object>-->
     <!--
 <div>
-    <embed src="./img/reader_hyread_logo.svg" style="display: block; width: 80px; height: 80px">
+    <embed src="./img/reader_hyread_logo.svg " style="display: block; width: 80px; height: 80px ">
 </div>
 -->
-    <!--    <embed src="img/reader_toolbar_zoomin-h-70.svg" style="display: block; width: 70px">-->
-    <!--    <embed src="./img/reader-toolbar-zoomout.svg" style="display: block; width: 80px">-->
+    <!--    <embed src="img/reader_toolbar_zoomin-h-70.svg " style="display: block; width: 70px ">-->
+    <!--    <embed src="./img/reader-toolbar-zoomout.svg " style="display: block; width: 80px ">-->
 
 
 
