eInk grayscale test3

--- a/index.html
+++ b/index.html
@@ -68,6 +68,58 @@
             <rect width="40" height="40" style="fill:rgb(0,0,0)" />
         </svg>
     </div>
+
+    <div class="container2">
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(253,253,253)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(230,230,230)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(215,215,215)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(197,197,197)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(178,178,178)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(170,170,170)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(153,153,153)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(136,136,136)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(119,119,119)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(102,102,102)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(85,85,85)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(68,68,68)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(51,51,51)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(34,34,34)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(17,17,17)" />
+        </svg>
+        <svg width="40" height="40">
+            <rect width="40" height="40" style="fill:rgb(0,0,0)" />
+        </svg>
+    </div>
+
     <div class="container">
         <img src="img/4_bit_grayscale_palette_by_10binary-d36dso3.png" width="360px">
     </div>
