--- a/index.html
+++ b/index.html
@@ -124,7 +124,65 @@
         <img src="img/4_bit_grayscale_palette_by_10binary-d36dso3.png" width="360px">
     </div>
 
+    <div class="container3">
 
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(170,170,170)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(169,169,169)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(168,168,168)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(167,167,167)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(166,166,166)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(165,165,165)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(164,164,164)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(163,163,163)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(162,162,162)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(161,161,161)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(160,160,160)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(159,159,159)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(158,158,158)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(157,157,157)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(156,156,156)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(155,155,155)" />
+        </svg>
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(154,154,154)" />
+        </svg>
+
+        <svg width="100" height="100">
+            <rect width="100" height="100" style="fill:rgb(153,153,153)" />
+        </svg>
+
+    </div>
     <!--
     <svg class=" circular " width="100% " height="100% " viewBox="0 0 42 42 ">
         <circle class="donut-hole " cx="21 " cy="21 " r="15.91549430918954 " fill="#fff "></circle>
