--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 <body>
 
-    <div>
+    <div display="flex" flex-direction="column">
+        <div><a>灰階漸層 rgb 255-0 </a></div>
         <svg width="640" height="200">
             <defs>
                 <linearGradient id="grad" x1="0%" y1="0%" x2="100%" y2="0%">
@@ -18,6 +19,26 @@
             <rect width="640" height="200" fill="url(#grad)" />
         </svg>
     </div>
+    <hr>
+    <div class="container">
+        <div><a>rgb <br>255</a></div>
+        <div><a>rgb <br>238</a></div>
+        <div><a>rgb <br>221</a></div>
+        <div><a>rgb <br>204</a></div>
+        <div><a>rgb <br>187</a></div>
+        <div><a>rgb <br>170</a></div>
+        <div><a>rgb <br>153</a></div>
+        <div><a>rgb <br>136</a></div>
+        <div><a>rgb <br>119</a></div>
+        <div><a>rgb <br>102</a></div>
+        <div><a>rgb <br>85</a></div>
+        <div><a>rgb <br>68</a></div>
+        <div><a>rgb <br>51</a></div>
+        <div><a>rgb <br>34</a></div>
+        <div><a>rgb <br>17</a></div>
+        <div><a>rgb <br>0</a></div>
+    </div>
+
     <div class="container">
         <svg width="40" height="40">
             <rect width="40" height="40" style="fill:rgb(255,255,255)" />
@@ -119,11 +140,26 @@
             <rect width="40" height="40" style="fill:rgb(0,0,0)" />
         </svg>
     </div>
-
     <div class="container">
-        <img src="img/4_bit_grayscale_palette_by_10binary-d36dso3.png" width="360px">
+        <div><a>rgb <br>247</a></div>
+        <div><a>rgb <br>230</a></div>
+        <div><a>rgb <br>213</a></div>
+        <div><a>rgb <br>196</a></div>
+        <div><a>rgb <br>179</a></div>
+        <div><a>rgb <br>162</a></div>
+        <div><a>rgb <br>145</a></div>
+        <div><a>rgb <br>128</a></div>
+        <div><a>rgb <br>111</a></div>
+        <div><a>rgb <br>94</a></div>
+        <div><a>rgb <br>77</a></div>
+        <div><a>rgb <br>60</a></div>
+        <div><a>rgb <br>43</a></div>
+        <div><a>rgb <br>26</a></div>
+        <div><a>rgb <br>9</a></div>
+        <div><a>rgb <br>0</a></div>
     </div>
-
+    <hr>
+    <a>rgb 170-153</a>
     <div class="container3">
 
         <svg width="100" height="100">
@@ -181,8 +217,14 @@
         <svg width="100" height="100">
             <rect width="100" height="100" style="fill:rgb(153,153,153)" />
         </svg>
-
     </div>
+
+    <hr>
+    <a>4-bit sample image</a>
+    <div class="container">
+        <img src="img/4_bit_grayscale_palette_by_10binary-d36dso3.png" width="360px">
+    </div>
+
     <!--
     <svg class=" circular " width="100% " height="100% " viewBox="0 0 42 42 ">
         <circle class="donut-hole " cx="21 " cy="21 " r="15.91549430918954 " fill="#fff "></circle>
