--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@
     <div class="container">
         <img src="img/4_bit_grayscale_palette_by_10binary-d36dso3.png" width="360px">
     </div>
+    <hr>
+    <div class="container2">
+        <div><img src="img/x_maz.png" width="360px"></div>
+        <div><img src="img/x_maz-4bit-gray.png" width="360px"></div>
+    </div>
 
     <!--
     <svg class=" circular " width="100% " height="100% " viewBox="0 0 42 42 ">
