--- a/index.html
+++ b/index.html
@@ -238,6 +238,13 @@
         <div><img src="img/x_maz-4bit-gray.png" width="360px"></div>
     </div>
 
+    <hr>
+    <h2> jpg /4bit jpg</h2>
+    <div class="container2">
+        <div><img src="img/maz18.jpg" width="360px"></div>
+        <div><img src="img/maz18-4bit-gray.jpg" width="360px"></div>
+    </div>
+
     <!--
     <svg class=" circular " width="100% " height="100% " viewBox="0 0 42 42 ">
         <circle class="donut-hole " cx="21 " cy="21 " r="15.91549430918954 " fill="#fff "></circle>
