--- a/index.html
+++ b/index.html
@@ -226,12 +226,13 @@
     </div>
 
     <hr>
-    <h2> jpg /4bit jpg</h2>
+    <h2> 彩色 jpg /灰階 4bit jpg</h2>
     <div class="container2">
         <div><img src="img/x_maz.jpg" width="360px"></div>
         <div><img src="img/x_maz-4bit-gray.jpg" width="360px"></div>
     </div>
     <hr>
+    <!--
     <h2> png /4bit png</h2>
     <div class="container2">
         <div><img src="img/x_maz.png" width="360px"></div>
@@ -239,7 +240,8 @@
     </div>
 
     <hr>
-    <h2> jpg /4bit jpg</h2>
+-->
+    <h2> 彩色 jpg /灰階 4bit jpg</h2>
     <div class="container2">
         <div><img src="img/maz18.jpg" width="640px"></div>
         <div><img src="img/maz18-4bit-gray.jpg" width="640px"></div>
